apps/lite/ui/src/routes/project/$id/workspace/WorkspaceItemRow.module.css
.itemRow,
.itemRowEmpty {
	display: flex;
	column-gap: 8px;
	min-height: 28px;
	padding-inline: 6px;
}

.itemRow {
	border-radius: var(--radius-m);

	&:where(:hover) {
		background-color: var(--button-ghost-hover-bg);
	}

	&[inert] {
		opacity: 0.5;
	}
}

.itemRowEmpty {
	color: var(--text-2);
}

.itemRowSelected {
	background-color: color-mix(var(--fill-gray-bg) 13%, transparent);

	&:has(:is(textarea, input):focus),
	[data-selection-scope]:focus & {
		background-color: var(--fill-gray-bg);
		color: var(--fill-gray-fg);
	}
}

.itemRowHighlighted {
	background-color: #63cdc7;
	color: var(--text-1);
}

.itemRowToolbar {
	display: none;
	column-gap: 2px;
	margin: -2px;
	padding-block: 6px;

	.itemRow:hover &,
	.itemRow:focus-within &,
	.itemRowSelected &,
	&.itemRowToolbarForceVisible {
		display: flex;
	}
}

.itemRowLabel {
	flex-grow: 1;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.itemRowLabelRegular {
	padding-block: 6px;
}

.itemRowLabelHeading {
	padding-block: 5.5px;
}

.itemRowButton {
	[data-selection-scope]:focus .itemRowSelected &,
	.itemRowSelected:has(:is(textarea, input):focus) & {
		/* Duplicated styles for inverted button variant. This is necessary to make
		the variant responsive to selection/focus changes purely with CSS. */

		--button-border: none;
		--button-bg: transparent;
		--button-fg: var(--text-1-invert);
		--button-icon-opacity: 0.7;
		--button-hover-bg: color-mix(in srgb, var(--scale-gray-100) 5%, transparent);
		--button-hover-icon-opacity: 0.9;
	}
}

.changesCountBubble {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	min-width: 20px;
	height: 16px;
	margin-inline-start: 6px;
	margin-block-start: -1px;
	padding-inline: 4px;
	padding-block: 2px;
	border-radius: 10px;
	background-color: var(--fill-gray-bg);
	color: var(--fill-gray-fg);
	vertical-align: middle;

	[data-selection-scope]:focus .itemRowSelected & {
		background-color: var(--fill-gray-fg);
		color: var(--fill-gray-bg);
	}
}

